--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-/*# sourceMappingURL=style.css.map */
+html{font-size:62.5%;scroll-behavior:smooth}body{font-size:1.4rem}.container{max-width:1440px;padding:3rem;margin:0 auto}/*# sourceMappingURL=style.css.map */
