--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -12,6 +12,16 @@ $mainBG:  hsl(218, 28%, 13%);
 $footBG:  hsl(216, 53%, 9%);
 $testBG:  hsl(219, 30%, 18%);
 $introBG: hsl(217, 28%, 15%);
+$test: green;
 
 $fyloCyan: hsl(176, 68%, 64%);
 $fyloBlue: hsl(198, 60%, 50%);
+
+//!! Mixins 
+
+@mixin center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
