--- a/scss/intro.scss
+++ b/scss/intro.scss
@@ -3,16 +3,67 @@
     background-image: url(../images/bg-curvy-desktop.svg);
     background-position: bottom;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: $headingsFont;
 
    &__img {
-       width: 50%;
-       height: 50%;
+       width: 60%;
+       height: 60%;
    }
+
+   &__title {
+       color: #fff;
+       font-size: 5rem;
+       max-width: 60%;
+       text-align: center;
+       line-height: 1.6;
+       margin-bottom: 2rem;
+   }
+
+   &__par {
+       color: #fff;
+       font-size: 2.5rem;
+       max-width: 50%;
+       text-align: center;
+       line-height: 1.6;
+   }
+}
+
+.gradient__btn {
+    @include gradBtn;
+    margin: 1.5rem 1rem 3rem;
+
+    &:focus {
+        outline: none;
+    }
+}
+
+@media all and (max-width: 768px) {
+
+    .intro__img {
+        width: 80%;
+        height: 80%;
+    }
+
+    .intro__title {
+        max-width: 85%;
+        font-size: 3rem;
+        line-height: 1.3;
+    }
+
+    .intro__par {
+        max-width: 80%;
+        font-size: 1.8rem;
+        line-height: 1.4;
+    }
+
+    .gradient__btn {
+        width: 20rem;
+    }
 }
