--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -25,3 +25,17 @@ $fyloBlue: hsl(198, 60%, 50%);
     justify-content: center;
     align-items: center;
 }
+
+@mixin gradBtn {
+    width: 30rem;
+    height: 6rem;
+    border-radius: 50px;
+    color: #fff;
+    background: linear-gradient(to right, $fyloCyan, $fyloBlue);
+    border: none; 
+    cursor: pointer;
+    font-size: 2rem;
+    font-weight: $bold;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+}
