--- a/scss/option.scss
+++ b/scss/option.scss
@@ -2,18 +2,34 @@
     background-color: $mainBG;
     color: #fff;
     font-family: $bodyFont;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    
-    
-    margin: 0 auto;
+
+    &__wrapper {
+
+        display: flex;
+        flex-direction: column;
+        
+        justify-content: center;
+        border: 1px solid red;
+        width: 80%;
+        flex-wrap: wrap;
+        column-width: 50%;
+        column-count: 2;
+        
+        margin: 0 auto;
+
+    }
+   
 
     &__item {
         display: flex; 
         flex-direction: column;
         text-align: center;
         justify-content: center;
-       
-}
+        width: 50%;
+        
+    }
+
+    &__icon {
+        max-width: 100%;
+    }
 }
