problem with flex-wrap

--- a/scss/option.scss
+++ b/scss/option.scss
@@ -1,7 +1,5 @@
 .option {
-    background-color: $mainBG;
-    color: #fff;
-    font-family: $bodyFont;
+    @include look;
     
 
     &__wrapper {
