--- a/scss/extra.scss
+++ b/scss/extra.scss
@@ -5,14 +5,13 @@
         width: 80%;
         padding: 5rem 2rem;
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         margin: 0 auto;
     }
 
     &__img {
-        width: 50rem;
+        width: 50%;
     }
 
     &__offer {
@@ -34,8 +33,44 @@
         padding-bottom: .5rem;
         text-decoration: none;
         display: inline-block;
-        width: fit-content;
-        
+        width: fit-content;    
         border-bottom: 1px solid $fyloCyan;
+    }
+}
+
+@media all and (max-width: 1023px) {
+    .extra {
+        &__wrapper {
+        flex-direction: column;
+        justify-content: center;       
+    }
+        &__offer {
+            margin-top: 3rem;
+        }
+
+        &__img {
+            padding: 0 1rem;
+            width: 80%;
+        }
+
+        &__title {
+            font-size: 3rem;
+        }
+}
+}
+
+@media all and (max-width: 400px) {
+    .extra {
+        &__title {
+            font-size: 2rem;
+        }
+
+        &__offer {
+            width: 100%;
+        }
+
+        &__text, &__link {
+            font-size: 1.2rem;
+        }
     }
 }
