--- a/scss/testimonial.scss
+++ b/scss/testimonial.scss
@@ -10,11 +10,52 @@
 
     &__item {
         background-color: $testBG;
-        width: 30%;
+        max-width: 26%;
+        padding: 4rem 3rem; 
+        position: relative;
+        z-index: 0;
+    }
+
+    &__quotes {
+        position: absolute;
+        top: -3.5rem;
+        left: -1.3rem;
+        z-index: -55;
     }
 
     &__text {
         margin: 0;
+        line-height: 1.8;
+        font-size: 1.6rem;
+    }
+
+    &__author {
+        display: flex;
+        align-items: center;
+        padding-top: 2rem;
+
+        &--name {
+            font-weight: bold;
+            font-size: 1.4rem;
+        }
+
+        &--role {
+            font-size: 1.2rem;
+        }
+    }
+
+    &__img {
+        border-radius: 50%;
+        width: 15%;
+    }
+
+    &__who {
+        display: flex;
+        flex-direction: column;
+        margin-left: 1rem;
+        line-height: 1.6;
+
+        
     }
 
 }
