--- a/scss/intro.scss
+++ b/scss/intro.scss
@@ -38,9 +38,15 @@
 .gradient__btn {
     @include gradBtn;
     margin: 1.5rem 1rem 5rem;
+    transition: .6s ease;
 
     &:focus {
         outline: none;
+    }
+
+    &:hover {
+        letter-spacing: 5px;
+        transition: .6s ease;
     }
 }
 
