--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -3,4 +3,39 @@
     background-color: $footBG;
     padding: 10rem;
     position: relative;
+
+    &__info {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__local {
+        display: flex;
+        align-items: center;
+    }
+
+    &__text {
+        width: 40%;
+        margin-left: 2rem;
+        line-height: 1.6;
+        font-size: 2rem;
+    }
+}
+
+.sitename__logo--footer {
+    margin: 10rem 0 3rem;
+}
+
+@media all and (max-width: 1000px) {
+    .sitename__logo--footer {
+        padding: 0;
+        margin-top: 5rem;
+    }
+}
+
+@media all and (max-width: 768px) {
+    .sitename__logo--footer {
+        width: 30%;
+    }
 }
