--- a/scss/extra.scss
+++ b/scss/extra.scss
@@ -3,7 +3,7 @@
 
     &__wrapper {
         width: 80%;
-        padding: 5rem 2rem;
+        padding: 20rem 2rem 15rem;
         display: flex;
         justify-content: center;
         align-items: center;
