--- a/scss/testimonial.scss
+++ b/scss/testimonial.scss
@@ -4,7 +4,7 @@
 
     &__wrapper {
         margin: 0 auto;
-        padding: 8rem 10rem;
+        padding: 8rem 10rem 15rem;
         display: flex;
         justify-content: space-between;
         z-index: 0;
